--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,12 @@ homepage: https://github.com/Ephenodrom/Flutter-Global-Config
 publish_to: https://pub.dartlang.org
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_test:
