--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: global_configuration
 description: A flutter package for managing different configurations and making them available everythere inside the app.
-version: 2.0.0-nullsafety.1
-author: Daniel Linsenmeier <daniel@ephenodrom.de>
+version: 2.0.0
 homepage: https://github.com/Ephenodrom/Flutter-Global-Config
 publish_to: https://pub.dartlang.org
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0-0 <4.0.0'
 
 dependencies:
   flutter:
